--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "gulp-useref": "^3.1.6"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
+    "jquery.maskedinput": "^1.4.1",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1",
     "svg4everybody": "^2.1.9"
